manifest/objects/ALTF__Usage__c.object
<CustomObject>
    <description>NO CONFIGURATION SUPPORT 

This object stores information about user activity on the various Altify screens. It is intended for use by customers wish to report on the uptake of Altify by their users.</description>
    <fields>
        <fullName>ALTF__Account_Manager_Details__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AM Details</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Account_Manager_Objectives__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AM Objectives</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Account_Manager_Overview__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AM Overview</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Account_Manager_PPT__c</fullName>
        <description>AM Powerpoint usage counter</description>
        <inlineHelpText>AM Powerpoint usage counter</inlineHelpText>
        <label>AM PPT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Account_Manager_Plan_Setup__c</fullName>
        <description>AM New Plan Setup log field</description>
        <inlineHelpText>Logs an usage every time when we hit &quot;Create new Plan&quot;</inlineHelpText>
        <label>AM Plan Setup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Account_Manager_Settings__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AM Settings</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Account_Manager_TandI__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AM T &amp; I</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Account_Manager__c</fullName>
        <formula>ALTF__Account_Manager_Overview__c + ALTF__Account_Manager_Details__c + ALTF__Account_Manager_Objectives__c + ALTF__Account_Manager_PPT__c + ALTF__Account_Manager_Settings__c + ALTF__Opportunity_Map__c + ALTF__Plan_Clone__c + ALTF__Account_Manager_Plan_Setup__c + ALTF__Account_Manager_TandI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Actions_Mobile__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actions Mobile</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Actions__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actions</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Assessment_Mobile__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Assessment Mobile</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Assessment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Assessment</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Insight_Mobile__c</fullName>
        <label>Insight Mobile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Insight__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Insight</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Launchpad__c</fullName>
        <label>Launchpad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Opportunity_Manager_Overview__c</fullName>
        <description>OM Overview usage counter</description>
        <inlineHelpText>OM Overview usage counter</inlineHelpText>
        <label>OM Overview</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Opportunity_Manager_PPT__c</fullName>
        <description>OM Powerpoint usage counter</description>
        <inlineHelpText>OM Powerpoint usage counter</inlineHelpText>
        <label>OM PPT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Opportunity_Manager_TandI__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OM T &amp; I</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Opportunity_Manager__c</fullName>
        <formula>ALTF__Opportunity_Manager_Overview__c + ALTF__Actions__c + ALTF__Assessment__c + ALTF__Insight__c + ALTF__Opportunity_Manager_PPT__c + ALTF__Relationships__c + ALTF__Opportunity_Manager_TandI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SOM Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Opportunity_Map__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Opportunity Map</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Plan_Clone__c</fullName>
        <label>Plan Clone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Quicklink__c</fullName>
        <description>Quicklink hit counter</description>
        <inlineHelpText>Quicklink hit counter</inlineHelpText>
        <label>Quicklink</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Relationships_Launchpad__c</fullName>
        <label>PoliticalMap_Launchpad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Relationships_Mobile__c</fullName>
        <description>Hit counter for the Mobile Political Map page.</description>
        <inlineHelpText>Hit counter for the Mobile Political Map page.</inlineHelpText>
        <label>Politics Mobile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Relationships__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Politics</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Sales_Process_Launchpad__c</fullName>
        <description>Page hits for the Playbook Launchpad</description>
        <label>PB Launchpad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Sales_Process_Mobile__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Playbook Mobile</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Sales_Process__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Playbook</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Sales_Process_and_Teamview__c</fullName>
        <formula>ALTF__Sales_Process__c + ALTF__Team_View__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PB Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Team_View__c</fullName>
        <description>Team View page hit counter</description>
        <inlineHelpText>Team View page hit counter</inlineHelpText>
        <label>Team View</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Usage_Date__c</fullName>
        <description>This field captures the date for particular user activity. For each screen / user tuple there will be at most 1 log record for any given date.</description>
        <label>Usage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ALTF__Usage__c</fullName>
        <formula>ALTF__Account_Manager__c + ALTF__Opportunity_Manager__c + ALTF__Sales_Process_and_Teamview__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DM Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user whose activity is recorded in a particular activity record</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dealmaker_Activity</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Altify Usage</label>
    <listViews>
        <fullName>ALTF__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DM Usage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Usage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>